# spelling-corrector

./: .gitignore  README.md  pyproject.toml
src/: correction.ipynb  correction.py  utils.py
src/datasets/: misspellings.txt  new_misspellings.txt
