[tool.poetry]
name = "quotidian"
version = "0.1.0"
description = "Everyday coding projects"
authors = ["Jonathan Buhler <jonathan@buhler.dev>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
