[tool.poetry]
name = "spelling-corrector"
version = "0.1.0"
description = "An understandable yet effective spelling corrector"
authors = ["Jonathan Buhler <jonathan@buhler.dev>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.9"
jupyterlab-spellchecker = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
